# debcast

./: .gitignore  CLAUDE.md  README.md  config.example.toml  main.py  pyproject.toml
.github/workflows/: checks.yml  ci.yml
debcast/: __init__.py  cli.py  config.py  pipeline.py  research_loop.py  types.py
debcast/providers/hosting/: local.py  podclaw.py
debcast/providers/research/: claude.py
debcast/providers/script/: claude.py
debcast/providers/tts/: elevenlabs.py  gemini.py  google_cloud.py  kokoro.py
debcast/utils/: audio.py
planning/: 00-overview.md  01-types-and-interfaces.md  02-config.md  03-research-loop.md  04-provider-research-claude.md  05-provider-script-claude.md  06-provider-tts.md  07-provider-hosting.md  08-pipeline-and-cli.md  09-testing-strategy.md  10-project-setup.md
tests/: conftest.py  test_audio_utils.py  test_config.py  test_main.py  test_pipeline.py  test_research_loop.py  test_script_generator.py
tests/providers/: test_hosting_local.py  test_hosting_podclaw.py  test_research_claude.py  test_tts_gemini.py
